# Fiit_EA_Hillclimber

./: CMakeLists.txt  README.md
include/: alpha.h  hcinput.h  hcoutput.h  hillclimber.h  mainwindow.h  qcustomplot.h  statistictest.h  util.h
src/: alpha.cpp  hcinput.cpp  hcoutput.cpp  hillclimber.cpp  main.cpp  mainwindow.cpp  statistictest.cpp
